--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="places.html">PLACES</a>
         </div>
         <div id="main-home">
-            <img src="images/map.png" width="100%"/>
+            <img src="images/ChatGPT Image May 23, 2025, 11_59_54 AM.png" width="100%"/>
         </div>
         <div id="tabs-bottom">
             <a href="weather.html">WEATHER</a>
